fix sldier spacing issue

--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -207,6 +207,7 @@ a.article:hover {
 	top: 0;
 	width: 100%;
 	justify-content: flex-end;
+	z-index: 9999;
 }
 
 .main-content {
